fix spacing, etc

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -407,6 +407,14 @@ hr {
   margin-left: 20px;
 }
 
+.beach .frosty {
+  background: rgba(0, 0, 0, 0.36)
+}
+
+.tech {
+  background: #2C6D78;
+}
+
 @charset "UTF-8";
 
 /*!
